eliminar jwt temporalmente, arreglar problemas de paginación con hashmap, refactorizar codigo creando mappers